overflowing fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,8 +5,13 @@ body {
   color: $secondary;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+}
+
 .main-page {
-  width: 100%;
+  // width: 100%;
   display: inline-flex;
   margin: 25px 15px;
   justify-content: center;
